# django-l10n-cu

./: .gitignore  CONTRIBUTING  MANIFEST.in  README.rst  setup.cfg
l10n_cuba/: admin.py  apps.py  fields.py  validators.py
l10n_cuba/data/: codigos_postales.py  municipios.py  provincias.py
l10n_cuba/migrations/: 0001_initial.py  0002_populate_table_provincia.py  0003_populate_table_municipio.py  0004_codigopostal.py  0005_populate_table_codigo_postal.py  0006_big_auto_field_pks.py
l10n_cuba/models/: __init__.py  codigo_postal.py  municipio.py  provincia.py
