[metadata]
name = django-l10n-cu
version = 0.2.4
description = A Django app for adapting a product for a cuban market.
long_description = file: README.md
url = https://mirage-tech-cuba.github.io/
author = Jorge Luis Alfonso Chavez
author_email = jlalfonso21@gmail.com
license = GNU General Public License v3 (GPLv3)
keywords = django, cuba
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
